# fastcode

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  build-releases.sh  clean_all.sh  intel-build-releases.sh  test_all.sh
HGWOSCA/: Makefile  main.c  main.h  tests
analysis/: runtime_plot.ipynb
bench/: Makefile  README.md  bench  main.c  ops.c  tsc_x86.h  utils.c  utils.h  utils.test
benchmark/: Makefile  README.md  benchmark.cpp  benchmark.h  gwo.cfg  main.c  main.cpp  range.h  run_algos.cpp  run_algos.h  tsc_x86.h  utils.cpp  utils.h  utils.hpp  utils_test
fastpy/: Pipfile  README.md  clean_output_folder.py  common.py  config_template.json  requirements.txt  run_benchmark.py  run_multi_benchmark.py
fastpy/data/: data_readme.txt
fastpy/fastpy/evaluation/: flop_count.py  performance_calculations.py  plotting.py
fastpy/fastpy/io/: __init__.py  config.py  debug_loader.py  io_utils.py  output_loader.py
fastpy/fastpy/io/config/: __init__.py
fastpy/fastpy/io/output/: __init__.py
fastpy/fastpy/obj_funcs/: __init__.py
fastpy/fastpy/run/: Runner.py
fastpy/fastpy/utils/: __init__.py
fastpy/fastpy/visualization/: viz_evolution.py  viz_utils.py
fastpy/notebooks/: Untitled.ipynb  context.py  evolution_animation.ipynb  performance_calculations.ipynb  plot_debug.ipynb  plot_optimization_evolution.ipynb  plot_performance_metrics.ipynb  plot_runtime.ipynb  run_benchmarks.ipynb  run_release_benchmarks.ipynb  runtime_plot.ipynb
fastpy/tests/: test_flop_count.py  test_visualization.py
include/: benchmark.h  cpp_utils.h  hgwosca.h  objectives.h  ops.h  penguin.h  pso.h  squirrel.h  testing_utilities.h  tsc_x86.h  utils.h  utils_test.h
objectives/: objectives.c  objectives.h
operation-bench/: README.md  bench  bench.c  ops.c  tsc_x86.h
penguin/: Makefile  main.c
sample-algo/: Makefile
src/: README.md  benchmark.cpp  cpp_utils.cpp  hgwosca.c  objectives.c  ops.c  penguin.c  pso.c  run_benchmark.cpp  squirrel.c  utils.c  utils.cpp
tests/: Makefile  integration.c  objectives.c  objectives.h  test_cpp_utils.cpp  test_hgwosca.c  test_integration  test_integration.cpp  test_integration_hgwosca.c  test_integration_pengu.c  test_integration_pso.c  test_integration_squirrel.c  test_objectives  test_objectives.c  test_penguin.c  test_penguin.cpp  test_pso.c  test_squirrel.c  test_utils.c  test_utils.cpp  testing_utilities.c  utils_test.c
